# cfo-helper

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  ONBOARDING.md  README.md  launcher.py  pyproject.toml
agents/: commercial.md  controller.md  coordinator.md  fpa.md  kaizen_recommendations.schema.json  reporting.md  review_findings.schema.json  reviewer.md  tps_lean.md  work_product.schema.json
connectors/: __init__.py  ap_stub.py  ar_stub.py  assumptions.py  config.yaml  crm_stub.py  erp_stub.py  excel.py  hris_stub.py  ibs.py  subledger.py  vendor_stub.py
inbox/: README.md
knowledge/: README.md  index.yaml
launcher/: error.html  loading.html
memory/: upstream_fsi_skills_pin.json  upstream_skills_pin.json
profile.example/: .denylist.example  CLAUDE.md.example  README.md  company_profile.yaml.example
runbooks/: monthly_close.md  post_close_deliverables.md
scripts/: __init__.py  _task_path.py  accounting_qa.py  build_fixture.py  build_knowledge_index.py  cash_flow.py  consolidate.py  cost_structure.py  dispatch.py  format.py  ingest.py  paths.py  profile_loader.py  reconcile.py  run_queue.py  seed_standard_work.py  seed_team.py  underwriting.py  variance.py  workproduct.py
task_types/: accounting_qa.yaml  ad_hoc.yaml  annual_plan_cycle.yaml  balance_sheet_review.yaml  cash_flow.yaml  ceo_letter.yaml  cost_structure.yaml  deal_review.yaml  deal_underwriting.yaml  knowledge_refresh.yaml  lean_process_review_monthly.yaml  lean_process_review_quarterly.yaml  month_end_close.yaml  mor.yaml  outlook_refresh_quarterly.yaml  reforecast.yaml  strategic_plan_3yr.yaml  tooling_freshness_review.yaml
templates/: exec_summary.md.j2
tests/: test_accounting_qa.py  test_build_fixture_cli.py  test_cash_flow.py  test_cost_structure.py  test_dispatch.py  test_document_builders.py  test_drilldown_decomposition.py  test_e2e_ceo_letter.py  (+25 more)
(+184 files in other folders)
