[project]
name = "cfo-helper"
version = "0.1.0"
description = "Local-first multi-agent finance team for month-end close, variance, planning, and board-grade reporting"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Intended Audience :: Financial and Insurance Industry",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "duckdb>=1.0",
    "pyarrow>=15",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10",
    "watchdog>=4.0",
    "httpx>=0.27",
    "markdown-it-py>=3.0",
    "python-pptx>=0.6.23",
    "python-docx>=1.1",
    "matplotlib>=3.8",
    "weasyprint>=60",
    "markdown>=3.5",
    "Pillow>=10.0",
    "filelock>=3.13",
    "pywebview>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["connectors", "scripts"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["scripts", "connectors", "web"]
omit = [
    "scripts/dispatch.py",  # covered indirectly by integration tests; large file pending split
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 70
